Started repo with cloned version from School of Code. I have no included the sample code from index.html as I already had head info in my file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,81 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>My awesome tribute page mofos</title>
-    <!-- The line below links your html document to your css stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- Copy and paste your HTML from CodePen into here -->
-  </body>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Irish+Grover&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+<main id="main">
+
+  <header id="header">
+    <h1 id="title">Sorley Maclean</h1>
+    <p>Poet and language activist for the Scottish Gaelic language</p>
+    <figure id="img-div">
+      <img src="http://www.sorleymaclean.org/images/gallery/Sorley-meeting-Mary-Rob.jpg" id="image" alt="Sorley Maclean shaking hands with Irish President Mary Robinson">
+
+      <figcaption id="img-caption">
+      Mary Robinson (left), then President of the Republic of Ireland, shaking hands with Sorley Maclean (right).
+      </figcaption>
+
+    </figure>
+
+  </header>
+
+  <nav>
+    <!-- I don't think there any navigation elements in this document -->
+  </nav>
+
+  <section id="tribute-info">
+
+    <h3 id="timeline-header">Here is a timeline of Mr Maclean's life:</h2>
+
+    <ul>
+
+      <li><strong>1911</strong> - Born in Raasay, Isle of Skye where he brought up in a traditional Scottish Gaelic speaking family on a simple croft</li>
+      <li><strong>1923</strong> - Death of his paternal grandmother, Mary Matheson, who taught Maclean many traditional songs and folklore from Kintail, Lochalsh, as well as from the Isle of Skye</li>
+      <li><strong>1929</strong> - left home to study English at the University of Edinburgh</li>
+      <li><strong>1931</strong> - becomes disillusioned with Prof. Grierson, then head of department, and moves to the study of Celtic with William J. Watson</li>
+      <li><strong>1933</strong> - graduates and trains to be a teacher, where he meets the renowned Scots poet Hugh MacDiarmid.</li>
+      <li><strong>1934</strong> - returns to Skye where he begins teaching English.</li>
+      <li><strong>1936</strong> - considers volunteering with the Brigades in the Spanish Civil War. However, as his family economics were suffering as a result of the Depression, he continues teaching </li>
+      <li><strong>1938</strong> - accepts teaching position in Tobermory on the Isle of Mull. This profoundly changes his perspective on the Scottish Gaelic language because the effects of the Highland Clearances are much more clear in this place than any other. He realises that his language has been subject to a destruction on Mull and dedicates himself to its revival.</li>
+      <li><strong>1939</strong> - teaches English in Edinburgh at Boroughmuir High School. It is during this period he writes his most famous poems <em>D&agrave;in do Eimhir</em> and the epic <em>An Cuilthionn</em></li>
+      <li><strong>1940</strong> - first publication of his work in the book <em>17 Poems for 6d</em>
+      <li><strong>1941</strong> Posted overseas as part of the Royal Corps of Signals</li>
+      <li><strong>1942</strong> - injured at the Battle of El Alamein. Returns to Scotland and his discharged from army in 1943</li>
+      <li><strong>1943</strong> - publication of <em>D&agrave;in do Eimhir</em> in Scottish Gaelic with glosses in English. Maclean didn't want to translate his work into English, a decision that hurt his standing in the English speaking poetry world of Scotland.</li>
+      <li><strong>1945 - 1972</strong> - completely stops writing poetry and dedicates his life to teaching, where he eventually becomes Headteacher of Plockton High School</li>
+      <li><strong>1972</strong> - Seamus Heaney invites Maclean to give a reading in Dublin. This kickstarts his poetry career again.</li>
+      <li><strong>1977</strong> - publication of a collected works, <em>Spring Tide and Neap-Time 1932-1972</em></li>
+      <li><strong>1989</strong> - appointed fellow of the Royal Society of Literature</li>
+      <li><strong>1990</strong> - Publication of his master work <em>O Choille gu Bearradh</em>, which was awarded Saltire Book of the Year.
+      <li><strong>1992</strong> - nominated for the Nobel Prize for Literature</li>
+      <li><strong>1996</strong> - dies aged 85.</li>
+      
+
+    </ul>
+
+  <blockquote cite="">
+    <p>Whether you were listening to him or reading him on the page, you were led into an uncanny zone, somewhere between the land of heart's desire and a waste land created by history - a felt history that stretched from the Highland clearances to the Spanish civil war and the world war it ushered in.</p>
+    <cite>~ Seamus Heaney, winner of the Nobel Prize for Literature</cite>
+    </blockquote>
+
+  </section>   
+
+
+  <footer id="footer">
+    <h3>Find out more about Sorley Maclean on his <a href="http://www.sorleymaclean.org/english/index.htm" id="tribute-link" target="_blank">official website</a> or check out his <a href="https://en.wikipedia.org/wiki/Sorley_MacLean" id="wikipedia-link" target="_blank">Wikipedia entry</a>.</h3>
+  </footer>  
+
+</main>  
+
+</body>
+
 </html>
