fixed a typo in the first bullet point

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <ul>
 
-      <li><strong>1911</strong> - Born in Raasay, Isle of Skye where he brought up in a traditional Scottish Gaelic speaking family on a simple croft</li>
+      <li><strong>1911</strong> - Born in Raasay, Isle of Skye where he was brought up in a traditional Scottish Gaelic speaking family on a simple croft</li>
       <li><strong>1923</strong> - Death of his paternal grandmother, Mary Matheson, who taught Maclean many traditional songs and folklore from Kintail, Lochalsh, as well as from the Isle of Skye</li>
       <li><strong>1929</strong> - left home to study English at the University of Edinburgh</li>
       <li><strong>1931</strong> - becomes disillusioned with Prof. Grierson, then head of department, and moves to the study of Celtic with William J. Watson</li>
